# FilterCamera

./: README.md  build.gradle  settings.gradle  yc.gradle
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/res/drawable/: background_circle.xml  shape_bg_cyan_round.xml  shape_bg_round.xml
android/src/main/res/layout/: activity_gallery.xml  activity_main.xml  activity_test.xml
android/src/main/res/values/: strings.xml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/jni_common/: jni_primitives.h
app/src/main/res/layout/: activity_main.xml  fragment_camera.xml
app/src/main/res/values/: strings.xml  styles.xml
cameralibrary/: build.gradle
cameralibrary/src/main/: AndroidManifest.xml
cameralibrary/src/main/res/layout/: activity_camera.xml  activity_camera_op.xml  fragment_camera_preview.xml  fragment_filter_edit.xml  (+4 more)
client/: build.gradle
client/src/main/: AndroidManifest.xml
dlib/: build.gradle
facedetectlibrary/: build.gradle
imageeditlibrary/: build.gradle
imagefilterlibrary/: build.gradle
imagefilterlibrary/src/main/: AndroidManifest.xml
imagefilterlibrary/src/main/jni/: CMakeLists.txt  MagicSDK.cpp
imagefilterlibrary/src/main/jni/bitmap/: BitmapOperation.cpp  BitmapOperation.h  Conversion.h
imagefilterlibrary/src/main/jni/skinsmooth/: MagicBeauty.cpp  MagicBeauty.h
landmarklibrary/: build.gradle
love/src/main/: AndroidManifest.xml
magiccamera/: build.gradle
magiccamera/src/main/: AndroidManifest.xml
(+66 files in other folders)
